5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1674_1872.log
== SUBMITION (2019-05-01 21:20:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("v de x:"))
y = float(input("v de y:"))

if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0)
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.205173
-- ERROR:
  File "/home/codebench/codes/1674/1872/main.py", line 15
    elif(y>0)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 21:20:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("v de x:"))
y = float(input("v de y:"))

if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0)
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- ERROR:
File "XXXX", line 15
    elif(y>0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 21:21:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("v de x:"))
y = float(input("v de y:"))

if(x==0)or(y==0):
	if(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(y==0)and(x>0)or(x<0):
		print("Eixo X")
	else:
		print("Origem")
elif(x<0):
	if(y<0):
		print("Q3")
	elif(y>0):
		print("Q2")
elif(x>0):
	if(y<0):
		print("Q4")
	elif(y>0):
		print("Q1")
-- EXECUTION TIME:
0.224015
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
